fix: make footer scrollUp/scrollDown buttons align with Append

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -793,7 +793,7 @@ button:focus {
     bottom: 45px;
     @media screen and (max-width: 725px) {
       right: 15px;
-      bottom: 5.2px;
+      bottom: 6.5px;
     }
   }
   #scrollToBottomButton {
@@ -802,7 +802,7 @@ button:focus {
     bottom: 10px;
     @media screen and (max-width: 725px) {
       right: 55px;
-      bottom: 5.2px;
+      bottom: 6.5px;
     }
   }
 }
